<resources>
    <string name="logo">Logo</string>
    <string name="version_postfix"></string>
    <string name="copyleft">Copyleft Feio 2015-2019</string>
    <string name="dev_site">http://www.iosue.it/federico</string>
    <string name="dev_github">https://github.com/federicoiosue</string>
    <string name="beta_link">https://play.google.com/apps/testing/pk.tappdesign.knizka</string>
    <string name="paypal">Paypal</string>
    <string name="paypal_url">http://goo.gl/ZXgBhz</string>
    <string name="bitcoin">Bitcoin</string>
    <string name="bitcoin_url">http://goo.gl/I6Xboe</string>
    <string name="help_online_url">https://goo.gl/Q843oh</string>
    <string name="list_item_button_delete">Delete</string>
    <string name="title_item_list">Prayers</string>
    <string name="add_note">Add Note</string>
    <string name="title">Title</string>
    <string name="title_activity_list">Knižka</string>
    <string name="search">Search</string>
    <string name="search_hint">Search in notes</string>
    <string name="content">Content</string>
    <string name="save">Save</string>
    <string name="share">Share</string>
    <string name="duplicate_note">Duplicate</string>
    <string name="add_note_to_linked_set">Add to new linked set</string>
    <string name="finish_open_linked_set">Finish open linked set</string>
    <string name="choose_color_scheme">Choose colors</string>
    <string name="undo">Undo</string>
    <string name="trash">Trash</string>
    <string name="trash_action">Trash</string>
    <string name="trashed">trashed</string>
    <string name="note_trashed">Note(s) trashed</string>
    <string name="note_untrashed">Note(s) restored from trash</string>
    <string name="untrash">Restore from trash</string>
    <string name="delete">Delete</string>
    <string name="note_deleted">Note(s) deleted permanently</string>
    <string name="archive">Archive</string>
    <string name="unarchive">Restore from archive</string>
    <string name="creation">Created:</string>
    <string name="last_update">Updated:</string>
    <string name="delete_note_confirmation">Confirm note deletion?</string>
    <string name="confirm">Confirm</string>
    <string name="ok">Ok</string>
    <string name="no">No</string>
    <string name="failed">failed</string>
    <string name="cancel">Cancel</string>
    <string name="note_updated">Note updated</string>
    <string name="empty_note_not_saved">Can\'t save an empty note</string>
    <string name="empty_note_not_shared">Can\'t share an empty note</string>
    <string name="note_doesnt_exist">Note doesn\'t exists anymore</string>
    <string name="song_not_found">Song doesn\'t exists</string>
    <string name="note_added_to_set">Note added to set</string>
    <string name="note_archived">Note archived</string>
    <string name="note_unarchived">Note restored from archive</string>
    <string name="note_duplicated">Note duplicated</string>
    <string name="note_duplicate_title_text">\u0020-\u0020copy</string>
    <string name="note_merged_title_text">\u0020(merged)</string>
    <string name="note">Note</string>
    <string name="share_message_chooser">Share with</string>
    <string name="shared_content_sign">\n【by Omni Notes】</string>
    <string name="sort">Sort</string>
    <string name="select_sorting_column">Sort by</string>
    <string name="tap_to_undo">Tap to undo</string>
    <string name="alarm_set_on">Reminder set for</string>
    <string name="starting_from">starting from</string>
    <string name="at_time">at</string>
    <string name="discard_changes">Discard changes</string>
    <string name="attachment">Attachment</string>
    <string name="favorite">Favorite</string>
    <string name="edit_note">Edit note</string>
    <string name="favorite_add">Add to Favorite</string>
    <string name="camera">Camera</string>
    <string name="delete_selected_image">Delete selected attachment?</string>
    <string name="delete_all_attachments">Delete all the attachments?</string>
    <string name="gallery">Gallery</string>
    <string name="location">Location</string>
    <string name="location_set_high_accuracy">Please set Location mode to high accuracy to continue</string>
    <string name="timestamp">Timestamp</string>
    <string name="pushbullet">Pushbullet</string>
    <string name="remove_location">Remove location?</string>
    <string name="remove_reminder">Remove reminder?</string>
    <string name="add_reminder">Add reminder</string>
    <string name="location_not_found">Location not found</string>
    <string name="record">Record</string>
    <string name="stop">Stop</string>
    <string name="no_app_to_handle_intent">No applications to handle file</string>
    <string name="storage_not_available">Storage not available</string>
    <string name="video">Video</string>
    <string name="feature_not_available_on_this_device">Feature unavailable on this device, sorry</string>
    <string name="error_occurred_deleting_note">Error while deleting note</string>
    <string name="no_backups_available">No backups available</string>
    <string name="data_export_message">Insert backup name</string>
    <string name="data_import_message">Click -&gt; restore\nLong-click -&gt; delete</string>
    <string name="data_import_message_warning">WARNING: This will replace all current data!</string>
    <string name="data_export_started">Data export is running on background. You can see the progress in notifications area</string>
    <string name="data_export_completed">Data backup completed</string>
    <string name="data_export_failed">Data backup failed: check logcat for details</string>
    <string name="data_import_started">Data import is running on background. You can see the progress in notifications area</string>
    <string name="data_import_completed">Data restore completed</string>
    <string name="data_import_failed">Data restore probably failed</string>
    <string name="click_to_refresh_application">Click to refresh application</string>
    <string name="backup_existing">Backup already exists. It\'ll be overwritten</string>
    <string name="remove_pinned">FATTO</string>
    <string name="dialog_title_warning">Warning</string>
    <string name="dialog_message_system_prayer">System prayer cannot be modified directly.\nCopy of prayer was created.</string>
    <string name="choose_prayer_set">Choose prayer set</string>
    <string name="choose_prayer_set_name">Prayer Set Name</string>
    <string name="btn_add_to_prayer_set">Add</string>
    <string name="btn_new_prayer_set">New</string>
    <string name="btn_dlg_cancel">Cancel</string>
    <string name="edt_dlg_hint">Prayer set name</string>
    <string name="tag">Tag</string>
    <string name="tags">Tags</string>
    <string name="add_tag">Add tags</string>
    <string name="add_new_tag">New</string>
    <string name="add_new_tag_hint">e.g. Tag1 Tag2 Tag3</string>
    <string name="add_new_tag_caption">Add new tags</string>
    <string name="select_tags">Select tag(s)</string>
    <string name="modify_tags">Select tag(s)</string>
    <string name="categories">Categories</string>
    <string name="edit_tag">Edit category</string>
    <string name="add_category">Add category</string>
    <string name="category_title">Title</string>
    <string name="category_description">Description</string>
    <string name="category_color">Color</string>
    <string name="category_saved">Category saved</string>
    <string name="category_deleted">Category deleted</string>
    <string name="category_missing_title">Category title missing</string>
    <string name="delete_this_category">Delete this category</string>
    <string name="category">Category</string>
    <string name="categorize_as">Categorize as</string>
    <string name="title_activity_category">Edit category</string>
    <string name="delete_unused_category_confirmation">Confirm category deletion?</string>
    <string name="delete_category_confirmation">This category is used by some notes.\nConfirm notes un-categorization and category deletion?</string>
    <string name="discard">Discard</string>
    <string name="remove_category">Remove category</string>
    <string name="choose_category_for_prayerset">Choose category</string>
    <string name="remove_prayer_item">Remove item?</string>
    <string name="no_tags_created">No tags available yet\nCreate them by writing hashtags into your notes</string>
    <string name="no_categories_created">No categories have been created yet</string>
    <string name="notes_category_removed">Category removed from notes</string>
    <string name="notes_categorized_as">Notes categorized as</string>
    <string name="insert_jks_number">Insert JKS number</string>
    <string name="jks_category_all">(all songs)</string>
    <string name="jks_category_prefix">Category:</string>
    <string name="jks_layout_number">Format number:</string>
    <string name="jks_list_is_empty">Song list is empty</string>
    <string name="insert_security_password">Insert password</string>
    <string name="lock">Lock</string>
    <string name="save_note_to_lock_it">Save note to lock it</string>
    <string name="save_note_to_unlock_it">Save note to unlock it</string>
    <string name="unlock">Unlock</string>
    <string name="title_activity_password">Edit security password</string>
    <string name="title_activity_jks_song_format">Choose format of JKS songs</string>
    <string name="title_activity_browse_texts">Browse through texts</string>
    <string name="title_activity_about">Info</string>
    <string name="title_activity_directorium">JKS Directorium</string>
    <string name="title_activity_resp_verses">Response verses</string>
    <string name="title_activity_JKS_origin">Origin of JKS</string>
    <string name="checklist_on">Enable checklist</string>
    <string name="checklist_off">Disable checklist</string>
    <string name="checklist_moveToBottom">Move checked items to bottom</string>
    <string name="sketch">Sketch</string>
    <string name="pin_note">Pin note</string>
    <string name="add_shortcut">Add shortcut</string>
    <string name="files">Files</string>
    <string name="info">Info</string>
    <string name="settings_choose_language">Language</string>
    <string name="theme_app">Application theme</string>
    <string name="colors_app">Application color scheme</string>
    <string name="settings_text_size">Text size</string>
    <string name="settings_jks_format_title">JKS song format</string>
    <string name="settings_attachments_on_bottom">Attachments on bottom</string>
    <string name="settings_attachments_on_bottom_summary_on">Shows attachments below note content</string>
    <string name="settings_attachments_on_bottom_summary_off">Shows attachments above note content</string>
    <string name="settings_jks_format_summary">Display format of JKS songs</string>
    <string name="settings_keep_screen_on">Keep screen on</string>
    <string name="settings_keep_screen_on_summary_on">Screen will be always ON</string>
    <string name="settings_keep_screen_on_summary_off">Screen will switch off as it is configured in system settings</string>
    <string name="settings_show_in_full_screen">Show texts in Fullscreen</string>
    <string name="settings_show_in_full_screen_on">Shows texts in Fullscreen without system bars</string>
    <string name="settings_show_in_full_screen_off">Shows texts with system bars</string>
    <string name="number_zero">0</string>
    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="number_six">6</string>
    <string name="number_seven">7</string>
    <string name="number_eight">8</string>
    <string name="number_nine">9</string>
    <string name="btn_clear">Clear</string>
    <string name="btn_backspace">Back</string>
</resources>