<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2013-2020 Federico Iosue (federico@iosue.it)
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:fitsSystemWindows="true">

  <ListPreference
    android:entries="@array/languages"
    android:entryValues="@array/languages_codes"
    android:key="settings_language"
    android:title="@string/settings_choose_language"
    app:iconSpaceReserved="false" />

  <pk.tappdesign.knizka.FontSizeListPreference
    android:defaultValue="default"
    android:entries="@array/text_size"
    android:entryValues="@array/text_size_values"
    android:key="settings_text_size"
    android:layout="@layout/settings_font_size_item"
    android:title="@string/settings_text_size"
  />


  <Preference
      android:key="settings_jks_format"
      android:summary="@string/settings_jks_format_summary"
      android:title="@string/settings_jks_format_title"
      app:iconSpaceReserved="false" />

  <ListPreference
    android:defaultValue="strip"
    android:entries="@array/colors_app"
    android:entryValues="@array/colors_app_values"
    android:key="settings_colors_app"
    android:title="@string/colors_app"
    app:iconSpaceReserved="false" />

<!--  <SwitchPreference  -->
<!--      android:defaultValue="false" -->
<!--      android:key="settings_fab_expansion_behavior" -->
<!--      android:summaryOff="@string/settings_fab_expansion_behavior_summary_off" -->
<!--      android:summaryOn="@string/settings_fab_expansion_behavior_summary_on" -->
<!--      android:title="@string/settings_fab_expansion_behavior" -->
<!--      app:iconSpaceReserved="false" /> -->

    <SwitchPreference
      android:defaultValue="false"
      android:key="settings_attachments_on_bottom"
      android:summaryOff="@string/settings_attachments_on_bottom_summary_off"
      android:summaryOn="@string/settings_attachments_on_bottom_summary_on"
      android:title="@string/settings_attachments_on_bottom"
      app:iconSpaceReserved="false" />

  <!--    <SwitchPreference -->
  <!--      android:defaultValue="true" -->
  <!--      android:key="settings_prettified_dates" -->
  <!--      android:summaryOff="@string/settings_prettified_dates_summary_off" -->
  <!--      android:summaryOn="@string/settings_prettified_dates_summary_on" -->
  <!--      android:title="@string/settings_prettified_dates" -->
  <!--      app:iconSpaceReserved="false" /> -->


  <ListPreference
      android:defaultValue="strip"
      android:entries="@array/html_color_schemes"
      android:entryValues="@array/html_color_schemes_values"
      android:key="settings_theme_app"
      android:title="@string/theme_app"
      app:iconSpaceReserved="false" />

  <SwitchPreference
      android:defaultValue="false"
      android:key="settings_keep_screen_on"
      android:summaryOff="@string/settings_keep_screen_on_summary_off"
      android:summaryOn="@string/settings_keep_screen_on_summary_on"
      android:title="@string/settings_keep_screen_on"
      app:iconSpaceReserved="false" />

  <SwitchPreference
      android:defaultValue="false"
      android:key="settings_show_full_screen"
      android:summaryOff="@string/settings_show_in_full_screen_off"
      android:summaryOn="@string/settings_show_in_full_screen_on"
      android:title="@string/settings_show_in_full_screen"
      app:iconSpaceReserved="false" />

</PreferenceScreen>
