<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2013-2019 Federico Iosue (federico@iosue.it)
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/menu_fullscreen_on"
        android:icon="@drawable/ic_full_screen_on_white_24dp"
        android:orderInCategory="50"
        android:title="@string/favorite"
        app:showAsAction="always"/>
    <item
        android:id="@+id/menu_fullscreen_off"
        android:icon="@drawable/ic_full_screen_off_white_24dp"
        android:orderInCategory="50"
        android:title="@string/favorite"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menu_ZoomIn"
        android:icon="@drawable/ic_zoom_in_white_24dp"
        android:orderInCategory="100"
        android:title="@string/favorite"
        app:showAsAction="always"/>
    <item
        android:id="@+id/menu_ZoomOut"
        android:icon="@drawable/ic_zoom_out_white_24dp"
        android:orderInCategory="200"
        android:title="@string/favorite"
        app:showAsAction="always"/>
    <item
        android:id="@+id/menu_add_random_from_category_to_prayer_set"
        android:icon="@drawable/ic_outline_note_add_white_24"
        android:orderInCategory="250"
        android:title="@string/favorite"
        app:showAsAction="always"/>
    <item
        android:id="@+id/menu_favorite"
        android:icon="@drawable/ic_favorite_white_24dp"
        android:orderInCategory="300"
        android:title="@string/favorite"
        app:showAsAction="always"/>
    <item
        android:id="@+id/menu_favorite_off"
        android:icon="@drawable/ic_favorite_border_white_24dp"
        android:orderInCategory="300"
        android:title="@string/favorite_add"
        app:showAsAction="always"/>
    <item
        android:id="@+id/menu_tag"
        android:icon="@drawable/ic_loyalty_white_24dp"
        android:orderInCategory="400"
        android:title="@string/add_tag"
        app:showAsAction="always"/>
    <item
        android:id="@+id/menu_checklist_on"
        android:icon="@drawable/ic_format_list_bulleted_black_24dp"
        android:orderInCategory="500"
        android:title="@string/checklist_on"
        android:visible="false"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_checklist_off"
    android:icon="@drawable/text_box_white"
        android:orderInCategory="500"
        android:title="@string/checklist_off"
        android:visible="false"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_checklist_moveToBottom"
        android:icon="@drawable/text_box_white"
        android:orderInCategory="550"
        android:title="@string/checklist_moveToBottom"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_lock"
        android:icon="@drawable/ic_lock_black_24dp"
        android:orderInCategory="600"
        android:title="@string/lock"
        android:visible="false"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_unlock"
        android:icon="@drawable/ic_lock_black_24dp"
        android:orderInCategory="600"
        android:title="@string/unlock"
        android:visible="false"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_add_shortcut"
        android:orderInCategory="700"
        android:title="@string/add_shortcut"
        android:visible="false"
        app:showAsAction="ifRoom"/>
    <item
    android:id="@+id/menu_pin_note"
    android:orderInCategory="750"
    android:title="@string/pin_note"
    android:visible="false"
    app:showAsAction="ifRoom" />
  <item
        android:id="@+id/menu_archive"
        android:icon="@drawable/ic_archive_white_24dp"
        android:orderInCategory="800"
        android:title="@string/archive"
        android:visible="false"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_unarchive"
        android:icon="@drawable/ic_unarchive_grey600_48dp"
        android:orderInCategory="800"
        android:title="@string/unarchive"
        android:visible="false"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_trash"
        android:orderInCategory="900"
        android:title="@string/trash"
        android:visible="false"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_untrash"
        android:icon="@drawable/ic_undelete_white_24dp"
        android:orderInCategory="900"
        android:title="@string/untrash"
        android:visible="false"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_edit_note"
        android:orderInCategory="950"
        android:title="@string/edit_note"
        android:visible="false"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_discard_changes"
        android:orderInCategory="1000"
        android:title="@string/discard_changes"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_category"
        android:icon="@drawable/ic_folder_special_white_24dp"
        android:orderInCategory="1100"
        android:title="@string/category"
        android:visible="false"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_attachment"
        android:icon="@drawable/ic_attachment_white_24dp"
        android:orderInCategory="1200"
        android:title="@string/attachment"
        app:showAsAction="ifRoom"/>
    <item
     android:id="@+id/menu_share"
     android:icon="@drawable/ic_share_white_24dp"
     android:orderInCategory="1300"
     android:title="@string/share"
     app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_color_theme"
        android:icon="@drawable/ic_palette_white_24dp"
        android:orderInCategory="1400"
        android:title="@string/choose_color_scheme"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_note_info"
        android:orderInCategory="1500"
        android:title="@string/info"
        app:showAsAction="ifRoom"/>

</menu>
