<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2013-2019 Federico Iosue (federico@iosue.it)
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:pixlui="http://schemas.android.com/apk/com.neopixl.pixlui"
              android:id="@+id/attachment_dialog_root"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="?attr/themeDialogBackgroundColor"
              android:orientation="vertical">

    <com.neopixl.pixlui.components.textview.TextView
            android:id="@+id/camera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/icon_selector"
            android:alpha="0.8"
            android:drawableLeft="?attr/ic_attach_dialog_camera"
            android:drawableStart="?attr/ic_attach_dialog_camera"
            android:drawablePadding="@dimen/attachment_dialog_drawable_padding"
            android:padding="@dimen/attachment_dialog_items_padding"
            android:paddingStart="@dimen/horizontal_margin"
            android:paddingLeft="@dimen/horizontal_margin"
            android:paddingEnd="@dimen/horizontal_margin"
            android:paddingRight="@dimen/horizontal_margin"
            android:text="@string/camera"
            android:textSize="@dimen/attachment_dialog_text_size"
            pixlui:typeface="Roboto-Regular.ttf"
            android:textColor="?attr/themeTextColor"/>

    <com.neopixl.pixlui.components.textview.TextView
            android:id="@+id/video"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/icon_selector"
            android:alpha="0.8"
            android:drawableLeft="?attr/ic_attach_dialog_video"
            android:drawableStart="?attr/ic_attach_dialog_video"
            android:drawablePadding="@dimen/attachment_dialog_drawable_padding"
            android:padding="@dimen/attachment_dialog_items_padding"
            android:paddingStart="@dimen/horizontal_margin"
            android:paddingLeft="@dimen/horizontal_margin"
            android:paddingEnd="@dimen/horizontal_margin"
            android:text="@string/video"
            android:textSize="@dimen/attachment_dialog_text_size"
            pixlui:typeface="Roboto-Regular.ttf"
            android:textColor="?attr/themeTextColor"/>

    <com.neopixl.pixlui.components.textview.TextView
            android:id="@+id/files"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/icon_selector"
            android:alpha="0.8"
            android:drawableLeft="?attr/ic_attach_dialog_file"
            android:drawableStart="?attr/ic_attach_dialog_file"
            android:drawablePadding="@dimen/attachment_dialog_drawable_padding"
            android:padding="@dimen/attachment_dialog_items_padding"
            android:paddingStart="@dimen/horizontal_margin"
            android:paddingLeft="@dimen/horizontal_margin"
            android:paddingEnd="@dimen/horizontal_margin"
            android:text="@string/files"
            android:textSize="@dimen/attachment_dialog_text_size"
            pixlui:typeface="Roboto-Regular.ttf"
            android:textColor="?attr/themeTextColor"/>

    <com.neopixl.pixlui.components.textview.TextView
            android:id="@+id/recording"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/icon_selector"
            android:alpha="0.8"
            android:drawableLeft="?attr/ic_attach_dialog_mic"
            android:drawableStart="?attr/ic_attach_dialog_mic"
            android:drawablePadding="@dimen/attachment_dialog_drawable_padding"
            android:padding="@dimen/attachment_dialog_items_padding"
            android:paddingStart="@dimen/horizontal_margin"
            android:paddingLeft="@dimen/horizontal_margin"
            android:paddingEnd="@dimen/horizontal_margin"
            android:text="@string/record"
            android:textSize="@dimen/attachment_dialog_text_size"
            pixlui:typeface="Roboto-Regular.ttf"
            android:textColor="?attr/themeTextColor"/>

    <com.neopixl.pixlui.components.textview.TextView
            android:id="@+id/sketch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/icon_selector"
            android:alpha="0.8"
            android:drawableLeft="?attr/ic_attach_dialog_draw"
            android:drawableStart="?attr/ic_attach_dialog_draw"
            android:drawablePadding="@dimen/attachment_dialog_drawable_padding"
            android:padding="@dimen/attachment_dialog_items_padding"
            android:paddingStart="@dimen/horizontal_margin"
            android:paddingLeft="@dimen/horizontal_margin"
            android:paddingEnd="@dimen/horizontal_margin"
            android:text="@string/sketch"
            android:textSize="@dimen/attachment_dialog_text_size"
            pixlui:typeface="Roboto-Regular.ttf"
            android:textColor="?attr/themeTextColor"/>

    <com.neopixl.pixlui.components.textview.TextView
            android:id="@+id/location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/icon_selector"
            android:alpha="0.8"
            android:drawableLeft="?attr/ic_attach_dialog_pin_drop"
            android:drawableStart="?attr/ic_attach_dialog_pin_drop"
            android:drawablePadding="@dimen/attachment_dialog_drawable_padding"
            android:padding="@dimen/attachment_dialog_items_padding"
            android:paddingStart="@dimen/horizontal_margin"
            android:paddingLeft="@dimen/horizontal_margin"
            android:paddingEnd="@dimen/horizontal_margin"
            android:text="@string/location"
            android:textSize="@dimen/attachment_dialog_text_size"
            pixlui:typeface="Roboto-Regular.ttf"
            android:visibility="gone"
            android:textColor="?attr/themeTextColor"/>

    <com.neopixl.pixlui.components.textview.TextView
            android:id="@+id/timestamp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/icon_selector"
            android:alpha="0.8"
            android:drawableLeft="?attr/ic_attach_dialog_clock"
            android:drawableStart="?attr/ic_attach_dialog_clock"
            android:drawablePadding="@dimen/attachment_dialog_drawable_padding"
            android:padding="@dimen/attachment_dialog_items_padding"
            android:paddingStart="@dimen/horizontal_margin"
            android:paddingLeft="@dimen/horizontal_margin"
            android:paddingEnd="@dimen/horizontal_margin"
            android:text="@string/timestamp"
            android:textSize="@dimen/attachment_dialog_text_size"
            pixlui:typeface="Roboto-Regular.ttf"
            android:textColor="?attr/themeTextColor"/>

    <com.neopixl.pixlui.components.textview.TextView
            android:id="@+id/pushbullet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/icon_selector"
            android:alpha="0.8"
            android:drawableLeft="?attr/ic_attach_dialog_laptop"
            android:drawableStart="?attr/ic_attach_dialog_laptop"
            android:drawablePadding="@dimen/attachment_dialog_drawable_padding"
            android:padding="@dimen/attachment_dialog_items_padding"
            android:paddingStart="@dimen/horizontal_margin"
            android:paddingLeft="@dimen/horizontal_margin"
            android:paddingEnd="@dimen/horizontal_margin"
            android:text="@string/pushbullet"
            android:visibility="gone"
            android:textSize="@dimen/attachment_dialog_text_size"
            pixlui:typeface="Roboto-Regular.ttf"
            android:textColor="?attr/themeTextColor"/>

</LinearLayout>
